--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "scripts": {
         "post-create-project-cmd": [
-            "mkdir .phalcon"
+            "mkdir .phalcon",
+            "php -r \"copy('.env.example', '.env');\""
         ]
     }
 }
