--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,25 @@
 TEST=HELLO_PHALCON
 APP_URL=http://wx.lmx0536.cn/phalcon
+UNIQUE_ID=phalcon-micro
 
-APPID=null
-APPSECRET=null
+DB_ADAPTER=Mysql
+DB_HOST=localhost
+DB_USERNAME=root
+DB_PASSWORD=910123
+DB_DBNAME=laravel
+DB_CHARSET=utf8
 
-MEMCACHED_HOST=127.0.0.1
-MEMCACHED_PORT=11211
-MEMCACHED_WEIGHT=1
+CACHE_DRIVER=redis
+SESSION_DRIVER=redis
+QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_AUTH=null
 REDIS_PERSISTENT=false
 REDIS_INDEX=0
-REDIS_PREFIX=phalcon:
+
+MEMCACHED_HOST=127.0.0.1
+MEMCACHED_PORT=11211
+MEMCACHED_WEIGHT=1
+
