--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "limingxinleo/limx-func": "^2.1",
         "limingxinleo/limx-package": "^1.0",
-        "limingxinleo/phalcon-utils": "^1.0"
+        "limingxinleo/phalcon-utils": "^1.0",
+        "vlucas/phpdotenv": "^2.4"
     },
     "scripts": {
         "post-create-project-cmd": [
