--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -9,4 +9,5 @@ dbname   = "laravel"
 controllersDir = "app/controllers/"
 modelsDir      = "app/models/"
 viewsDir       = "app/views/"
+migrationsDir  = "storage/migrations/"
 baseUri        = "/"
