--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,8 @@ DB_PASSWORD=910123
 DB_DBNAME=laravel
 DB_CHARSET=utf8
 
-CACHE_DRIVER=redis
-SESSION_DRIVER=redis
+CACHE_DRIVER=file
+SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
