* 修改其他服务的加载方式

--- a/.env
+++ b/.env
@@ -3,14 +3,14 @@ APP_URL=http://wx.lmx0536.cn/phalcon
 UNIQUE_ID=phalcon-micro
 
 DB_ADAPTER=Mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_USERNAME=root
 DB_PASSWORD=910123
-DB_DBNAME=laravel
+DB_DBNAME=phalcon
 DB_CHARSET=utf8
 
-CACHE_DRIVER=redis
-SESSION_DRIVER=redis
+CACHE_DRIVER=file
+SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 REDIS_HOST=121.42.193.38
@@ -22,4 +22,7 @@ REDIS_INDEX=0
 MEMCACHED_HOST=127.0.0.1
 MEMCACHED_PORT=11211
 MEMCACHED_WEIGHT=1
+
+LOG_SQL=true
+LOG_ERROR=true
 
