* 修改默认配置

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ DB_ADAPTER=Mysql
 DB_HOST=127.0.0.1
 DB_USERNAME=root
 DB_PASSWORD=910123
-DB_DBNAME=laravel
+DB_DBNAME=phalcon
 DB_CHARSET=utf8
 
 CACHE_DRIVER=file
