--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -3,7 +3,7 @@ adapter  = Mysql
 host     = "127.0.0.1"
 username = "root"
 password = "910123"
-dbname   = "laravel"
+dbname   = "phalcon"
 
 [application]
 controllersDir = "app/controllers/"
