* 增加时区配置

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 TEST=HELLO_PHALCON
-APP_URL=http://wx.lmx0536.cn/phalcon
+APP_URL=http://micro.phalcon.app
 UNIQUE_ID=phalcon-micro
+APP_TIMEZONE=Asia/Shanghai
 
 DB_ADAPTER=Mysql
 DB_HOST=127.0.0.1
