--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "post-create-project-cmd": [
             "mkdir .phalcon",
             "php -r \"copy('.env.example', '.env');\"",
-            "php run Init storage"
+            "php run"
         ]
     }
 }
