--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
         }
     ],
     "require": {
-        "limingxinleo/limx-func": "^2.1",
         "limingxinleo/limx-package": "^1.0",
         "limingxinleo/phalcon-utils": "^1.2.4",
         "vlucas/phpdotenv": "^2.4"
+    },
+    "require-dev": {
+        "limingxinleo/limx-package": "^1.0"
     },
     "scripts": {
         "post-create-project-cmd": [
